apply plugin: 'java'

sourceCompatibility = 1.8
targetCompatibility = 1.8

archivesBaseName = "toolX"
version = '17-11'

repositories {
 mavenCentral()
}

dependencies {
  compile files('lib/javax.json-1.0.4.jar')
  testCompile 'junit:junit:4.12'
}
